--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,6 +41,10 @@ if("${CMAKE_SYSTEM_NAME}" STREQUAL "Darwin")
     endif()
 endif()
 
+if(NO_OMP)
+    add_definitions(-DNO_OMP)
+endif()
+
 if(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX)
     add_definitions(-D COMPILER_GCC)
     set(USE_CLANG False)
@@ -99,15 +103,17 @@ if(LINUX_OS AND NOT "${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "armhf" AND NOT "${CMAK
     endif()
 endif()
 
-find_package(OpenCL QUIET)
-if(OPENCL_FOUND)
-    find_package(ViennaCL QUIET)
-    if(VIENNACL_FOUND)
-        message("Found ViennaCL!")
-        include_directories(${VIENNACL_INCLUDE_DIR})
-        add_definitions(-DUSE_OPENCL)
-    else()
-        message(WARNING "The ViennaCL Library is not installed! Will disable OpenCL features!")
+if(NOT NO_OPENCL)
+    find_package(OpenCL QUIET)
+    if(OPENCL_FOUND)
+        find_package(ViennaCL QUIET)
+        if(VIENNACL_FOUND)
+            message("Found ViennaCL!")
+            include_directories(${VIENNACL_INCLUDE_DIR})
+            add_definitions(-DUSE_OPENCL)
+        else()
+            message(WARNING "The ViennaCL Library is not installed! Will disable OpenCL features!")
+        endif()
     endif()
 endif()
 
