--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -166,8 +166,8 @@ if(NOT OSX_10_9 AND NOT LINUX_OS AND NOT NO_OPENMP)
 endif()
 
 if(OSX OR OSX_BIGSUR)
-    find_package(OpenMP REQUIRED)
-    if(NOT NO_OPENMP)
+    find_package(OpenMP QUIET)
+    if(NOT NO_OPENMP OR NOT OPENMP_FOUND)
     	if(EXISTS /usr/local/lib/libomp.dylib)
         		set(OMP_LIB /usr/local/lib/libomp.dylib)
         elseif(EXISTS /usr/local/lib/libomp.a)
