--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -184,8 +184,10 @@ if(OSX OR OSX_BIGSUR)
         		set(OMP_LIB /usr/lib/libomp.dylib)
     	elseif(EXISTS /usr/lib/libomp.a)
         		set(OMP_LIB /usr/lib/libomp.a)
+	else()
+        		message(FATAL_ERROR "Mac OS Detected but No OpenMP Library Found!")
     	endif()
-         message("OpenMP: ${OMP_LIB}")
+        message("OpenMP: ${OMP_LIB}")
     endif()
 elseif(LINUX_OS AND NOT USE_CLANG)
     find_package(OpenMP REQUIRED)
