--- a/LibQPEPConfig.cmake.in
+++ b/LibQPEPConfig.cmake.in
@@ -36,8 +36,13 @@ if("${CMAKE_SYSTEM_NAME}" STREQUAL "Darwin")
     endif()
 endif()
 
-if(${CMAKE_COMPILER_IS_GNUCC} OR ${CMAKE_COMPILER_IS_GNUCXX})
+if(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX)
     add_definitions(-D COMPILER_GCC)
+    set(USE_CLANG False)
+elseif(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
+    add_definitions(-D COMPILER_CLANG)
+    set(USE_CLANG True)
+    message("Using Clang compiler.")
 endif()
 
 if("${CMAKE_SYSTEM_NAME}" STREQUAL "Linux")
@@ -45,13 +50,26 @@ if("${CMAKE_SYSTEM_NAME}" STREQUAL "Linux")
 endif()
 
 if(LINUX_OS)
-    include_directories(/opt/intel/mkl/include /opt/intel/oneapi/mkl/latest/include)
-    link_directories(
-    	/opt/intel/mkl/lib/intel64
-    	/opt/intel/lib/intel64
-    	/opt/intel/oneapi/mkl/latest/lib/intel64
-    	/opt/intel/oneapi/intelpython/python3.7/lib/)
+    if(NOT USE_CLANG)
+    	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Ofast -ffast-math -pthread -lpthread -lrt -lm -lz -g")
+    else()
+    	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Xpreprocessor -fopenmp -Ofast -ffast-math -pthread -lpthread -lrt -lm -lz -g")
+        set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -lstdc++ -lomp")
+    endif()
+
+    if(NOT "${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "armhf" AND NOT "${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "aarch64" AND NOT "${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "arm64")
+    	include_directories(/opt/intel/mkl/include /opt/intel/oneapi/mkl/latest/include)
+    	link_directories(
+    		/opt/intel/mkl/lib/intel64 
+    		/opt/intel/lib/intel64
+    		/opt/intel/oneapi/mkl/latest/lib/intel64
+    		/opt/intel/oneapi/intelpython/python3.7/lib/)
+    endif()
 endif()
+
+add_definitions(-DCURRENT_SRC_DIR="${CMAKE_CURRENT_SOURCE_DIR}")
+
+set(CMAKE_CXX_STANDARD 11)
 find_package(Eigen3 QUIET)
 if(NOT EIGEN3_FOUND)
   # Fallback to cmake_modules
