--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,6 +43,7 @@ endif()
 
 if(NO_OMP)
     add_definitions(-DNO_OMP)
+    set(NO_OPENMP TRUE)
     message("Disabling OpenMP!")
 else()
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Xpreprocessor -fopenmp")
