--- a/LibQPEPConfig.cmake.in
+++ b/LibQPEPConfig.cmake.in
@@ -9,10 +9,10 @@ include(${CMAKE_CURRENT_LIST_DIR}/LibQPEP-config.cmake)
 # Compute paths
 get_filename_component(QPEP_CMAKE_DIR "${CMAKE_CURRENT_LIST_FILE}" PATH)
 message("LibQPEP Found in: ${QPEP_CMAKE_DIR}")
-set(LibQPEP_INCLUDE_DIRS "${CMAKE_CURRENT_LIST_DIR}/../../../include" "@CONF_INCLUDE_DIRS@")
-set(qpep_INCLUDE_DIRS "${CMAKE_CURRENT_LIST_DIR}/../../../include" "@CONF_INCLUDE_DIRS@")
-set(QPEP_INCLUDE_DIRS "${CMAKE_CURRENT_LIST_DIR}/../../../include" "@CONF_INCLUDE_DIRS@")
-set(LibQPEP_INCLUDE_DIR "${CMAKE_CURRENT_LIST_DIR}/../../../include" "@CONF_INCLUDE_DIRS@")
+set(LibQPEP_INCLUDE_DIRS "${CMAKE_CURRENT_LIST_DIR}/../../../include")
+set(qpep_INCLUDE_DIRS "${CMAKE_CURRENT_LIST_DIR}/../../../include")
+set(QPEP_INCLUDE_DIRS "${CMAKE_CURRENT_LIST_DIR}/../../../include")
+set(LibQPEP_INCLUDE_DIR "${CMAKE_CURRENT_LIST_DIR}/../../../include")
 
 if("${CMAKE_SYSTEM_NAME}" STREQUAL "Linux")
     set(SUFFIX "so")
@@ -20,10 +20,10 @@ elseif("${CMAKE_SYSTEM_NAME}" STREQUAL "Darwin")
     set(SUFFIX "dylib")
 endif()
 
-set(LibQPEP_LIBRARIES "${CMAKE_CURRENT_LIST_DIR}/../../../lib/lib@QPEP_LIB@.${SUFFIX};@EXTERNAL_LIBS@")
-set(LibQPEP_LIBRARIES "${CMAKE_CURRENT_LIST_DIR}/../../../lib/lib@QPEP_LIB@.${SUFFIX};@EXTERNAL_LIBS@")
-set(qpep_LIBRARIES "${CMAKE_CURRENT_LIST_DIR}/../../../lib/lib@QPEP_LIB@.${SUFFIX};@EXTERNAL_LIBS@")
-set(QPEP_LIBRARIES "${CMAKE_CURRENT_LIST_DIR}/../../../lib/lib@QPEP_LIB@.${SUFFIX};@EXTERNAL_LIBS@")
+set(LibQPEP_LIBRARIES "${CMAKE_CURRENT_LIST_DIR}/../../../lib/lib@QPEP_LIB@.${SUFFIX}")
+set(LibQPEP_LIBRARIES "${CMAKE_CURRENT_LIST_DIR}/../../../lib/lib@QPEP_LIB@.${SUFFIX}")
+set(qpep_LIBRARIES "${CMAKE_CURRENT_LIST_DIR}/../../../lib/lib@QPEP_LIB@.${SUFFIX}")
+set(QPEP_LIBRARIES "${CMAKE_CURRENT_LIST_DIR}/../../../lib/lib@QPEP_LIB@.${SUFFIX}")
 
 # This causes catkin simple to link against these libraries
 set(LibQPEP_FOUND_CATKIN_PROJECT true)
