--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -91,6 +91,16 @@ include_directories(fsolve_wrapper)
 add_executable(LibQPEP-test main.cpp)
 add_library (LibQPEP SHARED ${srcs})
 
+if(LINUX_OS)
+    if(NOT "${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "armhf" AND NOT "${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "aarch64" AND NOT "${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "arm64")
+        target_compile_options(LibQPEP PRIVATE -msse -msse2 -msse3 -msse4 -msse4.1 -msse4.2)
+    elseif("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "armhf")
+        target_compile_options(LibQPEP PRIVATE -mfpu=neon -mfloat-abi=hardfp)
+    elseif("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "aarch64" OR "${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "arm64")
+        target_compile_options(LibQPEP PRIVATE -march=native)
+    endif()
+endif()
+
 if(NOT LINUX_OS)
     find_library(CORE_GRAPHICS CoreGraphics QUIET)
     target_link_libraries(LibQPEP ${OpenCV_LIBS} ${LAPACK_LIBRARIES} ${X11_LIBRARIES} ${BLAS_LIBRARIES} ${CORE_GRAPHICS})
